--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -201,7 +201,7 @@
             <view class='cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
               <view class='t-cardBottomItem flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
                 <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
-                <span>提交项目</span>
+                <span>推送项目</span>
               </view>
               <view class="t-line"></view>
               <view class='t-cardBottomItem flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
