--- a/Weitianshi/pages/discover/financingAdvisor/financingAdvisor.wxml
+++ b/Weitianshi/pages/discover/financingAdvisor/financingAdvisor.wxml
@@ -2,14 +2,14 @@
   <!--筛选和搜索  -->
   <template is="newSearch" data="{{text:searchText,searchTap:'searchSth',filter:'tagFilter'}}"></template>
 <!--投资人  -->
-<scroll-view style="height:1108rpx;margin-top:96rpx" scroll-y="true" bindscrolltolower='loadMore'>
+<scroll-view style="height:2000rpx;margin-top:96rpx" scroll-y="true" bindscrolltolower='loadMore'>
   <!-- <template is="searchNothing" data="{{empty:investorList}}"></template> -->
   <block wx:for="{{faList}}" wx:key="{{faList}}">
     <view class='investorCard'>
       <view class="t-investorColor" hover-class='t-hoverColor'>
         <template is='InvestorCard' data='{{item,user_id,user_mobile}}'></template>
         <view class="t-alineHeight"></view>
-        <template is='cardBottom1' data='{{item,user_id}}'></template>
+        <template is='cardBottom1' data='{{item}}'></template>
       </view>
     </view>
   </block>
