--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -10,7 +10,7 @@
   <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:1038rpx" bindchange="bindChange">
     <!--项目详情  -->
     <swiper-item>
-      <scroll-view scroll-y="true">
+      <scroll-view scroll-y="true" wx:if="{{jiazai==true}}">
         <view class="classname">
           <view class="projectDetailTop">
             <view class="projectDetailBox">
@@ -131,7 +131,7 @@
             <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
               <view class="brightPointBox flex">
                 <!-- <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image> -->
-                <view class="title" style="margin-bottom:32rpx">产品概况</view>
+                <view class="title " style="margin-bottom:32rpx">产品概况</view>
               </view>
               <!-- <view class="{{isChecked2?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
               <view class="brightUnfoldAfter" value="{{number}}">
@@ -402,7 +402,7 @@
           <button class="{{matchBut1?'t-matchButton4':'t-matchButton2'}}" bindtap='matchButt1'>投资机构(<label>{{investment_total_num}}</label>)</button>
         </view>
         <!--买家图谱  -->
-        <scroll-view wx:if="{{matchBut}}" scroll-y="true" style="height: 1108rpx;" bindscrolltolower="loadMore">
+        <scroll-view wx:if="{{matchBut}}" scroll-y="true" style="height: 2000rpx;" bindscrolltolower="loadMore">
           <view class="buyerPage">
             <!-- <view id="matching">匹配推荐：
             <label>{{matchCount}}</label>个</view> -->
@@ -429,7 +429,7 @@
           </view>
         </scroll-view>
         <!--机构版买家图谱  -->
-        <scroll-view wx:if="{{matchBut1}}" style='height:1108px;' scroll-y='true' scroll-top="{{scroll}}" bindscrolltolower='loadMore1'>
+        <scroll-view wx:if="{{matchBut1}}" style='height:2000rpx;' scroll-y='true' scroll-top="{{scroll}}" bindscrolltolower='loadMore1'>
           <view class="{{investment_list.length==0?'media123':'media12'}}">
             <view class="matchIntro">{{newPage.pro_intro}}</view>
             <view id="investment1" wx:if="{{investment_list.length!=0}}">
