--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -222,8 +222,9 @@ page {
   font-size: 24rpx;
   color: #3378e0;
   line-height: 54rpx;
-  text-align: center;
+  text-align: right;
   margin-top: 29rpx;
+  margin-right:12rpx;
 }
 
 .blockContentAfter {
@@ -272,6 +273,8 @@ page {
   border-radius: 4rpx;
   padding: 8rpx;
   height: 20rpx;
+  margin-top: 6rpx;
+  margin-left: 8rpx;
 }
 
 /*税号  */
@@ -444,7 +447,7 @@ page {
   margin: 0 32rpx;
   width: 91.5%;
   height: 1rpx;
-  background: #e6e6e6;
+  background: #f0f0f0;
 }
 
 /*我的信息  */
@@ -514,6 +517,14 @@ page {
 .flexCenter {
   justify-content: center;
 }
-.userName{
+
+.userName {
   font-weight: bold;
+}
+
+.checkNum {
+  font-size: 24rpx;
+  margin-top: 4rpx;
+  color: #3378e0;
+  text-align: left;
 }
