--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -34,8 +34,9 @@
     <block wx:for="{{slectProject}}" wx:key="{{index}}">
       <view class="selectProjectBox" data-project="{{item.project_id}}" hover-class='t-hoverColor' catchtap="projectDetail">
         <view class="describle" wx:if="{{item.pro_intro != ''}}">
-          <image src='/img/icon-jingxuan@2x.png' class="selectPic" wx:if="{{item.is_selected == 3}}"></image>
-          {{item.pro_intro}}</view>
+          <image src='/img/img-jingxuan@2x.png' class="selectPic" wx:if="{{item.is_selected == 3}}"></image>
+         <label> {{item.pro_intro}}</label>
+         </view>
         <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
         <view class='flex industryBox' wx:if="{{item.pro_industry.length != 0}}">
           <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
