--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -10,7 +10,7 @@
   <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:1038rpx" bindchange="bindChange">
     <!--项目详情  -->
     <swiper-item>
-      <scroll-view scroll-y="true" wx:if="{{jiazai==true}}">
+      <scroll-view scroll-y="true">
         <view class="classname">
           <view class="projectDetailTop">
             <view class="projectDetailBox">
@@ -90,7 +90,7 @@
             <view class="brightPoint " wx:if="{{project.pro_goodness.length!=0}}">
               <view class="brightPointBox flex">
                 <!-- <image src="/img/img-star.png" class="titlePic"></image> -->
-                <view class="title " style="margin-bottom:32rpx">投资亮点</view>
+                <view class="title" style="margin-bottom:32rpx">投资亮点</view>
               </view>
               <!-- <view class="{{isChecked0?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
               <view class="brightUnfoldAfter" value="{{number}}">
@@ -110,7 +110,7 @@
             <view class="brightPoint " wx:if="{{project.pro_market_genera.length!=0}}">
               <view class="brightPointBox flex">
                 <!-- <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image> -->
-                <view class="title " style="margin-bottom:32rpx">市场概况</view>
+                <view class="title" style="margin-bottom:32rpx">市场概况</view>
               </view>
               <!-- <view class="{{isChecked1?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
               <view class="brightUnfoldAfter" value="{{number}}">
@@ -131,7 +131,7 @@
             <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
               <view class="brightPointBox flex">
                 <!-- <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image> -->
-                <view class="title " style="margin-bottom:32rpx">产品概况</view>
+                <view class="title" style="margin-bottom:32rpx">产品概况</view>
               </view>
               <!-- <view class="{{isChecked2?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
               <view class="brightUnfoldAfter" value="{{number}}">
@@ -397,12 +397,14 @@
       <scroll-view style="height:100%" scroll-y="true">
         <view class="t-matchButton flex">
           <!--t-matchButton1  代表选中  -->
-          <button class="{{matchBut?'t-matchButton1':'t-matchButton3'}}" bindtap='matchButt'>投资人(<label>{{matchCount}}</label>)
+          <button class="{{matchBut?'t-matchButton1':'t-matchButton3'}}" bindtap='matchButt'>投资人(
+            <label>{{matchCount}}</label>)
           </button>
-          <button class="{{matchBut1?'t-matchButton4':'t-matchButton2'}}" bindtap='matchButt1'>投资机构(<label>{{investment_total_num}}</label>)</button>
+          <button class="{{matchBut1?'t-matchButton4':'t-matchButton2'}}" bindtap='matchButt1'>投资机构(
+            <label>{{investment_total_num}}</label>)</button>
         </view>
         <!--买家图谱  -->
-        <scroll-view wx:if="{{matchBut}}" scroll-y="true" style="height: 2000rpx;" bindscrolltolower="loadMore">
+        <scroll-view wx:if="{{matchBut}}" scroll-y="true" style="height: 1108rpx;" bindscrolltolower="loadMore">
           <view class="buyerPage">
             <!-- <view id="matching">匹配推荐：
             <label>{{matchCount}}</label>个</view> -->
@@ -429,7 +431,7 @@
           </view>
         </scroll-view>
         <!--机构版买家图谱  -->
-        <scroll-view wx:if="{{matchBut1}}" style='height:2000rpx;' scroll-y='true' scroll-top="{{scroll}}" bindscrolltolower='loadMore1'>
+        <scroll-view wx:if="{{matchBut1}}" style='height:1108rpx;' scroll-y='true' scroll-top="{{scroll}}" bindscrolltolower='loadMore1'>
           <view class="{{investment_list.length==0?'media123':'media12'}}">
             <view class="matchIntro">{{newPage.pro_intro}}</view>
             <view id="investment1" wx:if="{{investment_list.length!=0}}">
