--- a/Weitianshi/pages/discover/myFriend/myFriend.wxml
+++ b/Weitianshi/pages/discover/myFriend/myFriend.wxml
@@ -2,7 +2,7 @@
 <!--筛选和搜索  -->
 <template is="newSearch" data="{{text:searchText,searchTap:'searchSth',filter:'tagFilter'}}"></template>
 <!--投资人  -->
-<scroll-view style="height:2000rpx;margin-top:96rpx" scroll-y="true" bindscrolltolower='loadMore'>
+<scroll-view style="height:1108rpx;margin-top:96rpx" scroll-y="true" bindscrolltolower='loadMore'>
   <!-- <template is="searchNothing" data="{{empty:investorList}}"></template> -->
   <block wx:for="{{myList}}" wx:key="{{myList}}">
     <view class='investorCard'>
@@ -18,6 +18,8 @@
           <view class="t-userPart1">{{item.authentication[0].group_title}}</view> -->
                 <image class="t-renzheng" wx:if="{{item.authentication.group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
                 <image class="t-renzheng" wx:if="{{item.authentication.group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
+                <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='卖方FA'}}" src="/img/img-maifang2@2x.png"></image>
+                <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='创业者'}}" src="/img/img-chuangyezhe1@2x.png"></image>
               </view>
               <view class="t-record">{{item.active_status}}</view>
               <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
@@ -27,8 +29,8 @@
               <view class="t-userPosition">{{item.user_company_career}}</view>
               <view class="t-userCompany1" wx:if="{{item.user_company_name}}">·{{item.user_company_name}}</view>
             </view>
-            <view class='t-people flex' >
-              <view class='t-cardBottomItem t-add flex'  hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
+            <view class='t-people flex'>
+              <view class='t-cardBottomItem t-add flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
                 <!-- <image class='t-itemPic' src='/img/icon-huweirenmai@2x.png'></image> -->
                 <view>打电话</view>
               </view>
@@ -69,7 +71,7 @@
           <view class="t-line"></view>
           <view class='t-cardBottomItem1 flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
             <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
-            <span>推送项目</span>
+            <span>提交项目</span>
           </view>
 
         </view>
