--- a/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
+++ b/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
@@ -21,6 +21,7 @@
           <view class="t-investorColor" hover-class='t-hoverColor'>
             <!-- <template is='InvestorCard' data='{{item}}'></template> -->
             <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
+            <view class="t-redPoint" wx:if="{{item.message_status == 0}}"></view>
               <view class="t-applyMyProject t-contacts-detailm">
                 <view class="t-introduceBox flex">
                   <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
@@ -28,6 +29,8 @@
                   <view class="t-userPart flex" wx:if="{{item.user_groups[0].group_title}}">
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资人'}}" src="/img/img-touziren@2x.png"></image>
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='卖方FA'}}" src="/img/img-maifang2@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='创业者'}}" src="/img/img-chuangyezhe1@2x.png"></image>
                   </view>
                   <view class="t-record" wx:if="{{item.active_status}}">{{item.active_status}}</view>
                   <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
@@ -40,7 +43,7 @@
                 <view class='t-people flex' wx:if='{{item.user_id!=user_id}}'>
                 </view>
                 <view class='t-people flex' wx:if='{{item.user_id==user_id}}'></view>
-                <view class="t-roundGroupPush flex" >
+                <view class="t-roundGroupPush flex">
                   <image class="t-roundGroupTitle" src="/img/icon-lunci@2x.png"></image>
                   <view class="t-roundGroupContent" wx:if="{{item.user_invest_industry.length != 0}}">
                     <block wx:for="{{item.user_invest_industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
@@ -54,7 +57,7 @@
                   </view>
                   <view class="t-roundGroupContent" wx:if="{{item.user_invest_industry.length == 0}}">暂未透露</view>
                 </view>
-                <view class="t-roundGroupPush flex" >
+                <view class="t-roundGroupPush flex">
                   <image class="t-roundGroupTitle" src="/img/icon-lingyu1@2x.png"></image>
                   <view class="t-roundGroupContent" wx:if="{{item.user_invest_stage.length != 0}}">
                     <block wx:for="{{item.user_invest_stage}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
@@ -89,7 +92,7 @@
               <view class="t-line"></view>
               <view class='t-cardBottomItem2 flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
                 <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
-                <span>推送项目</span>
+                <span>提交项目</span>
               </view>
             </view>
             <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
