--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -51,10 +51,10 @@
     <!--项目亮点-->
     <view class="brightBox" style="background: white;" wx:if="{{button_type != 1}}">
       <!--项目亮点-->
-      <view class="brightPoint " wx:if="{{project.pro_goodness.length!=0}}">
+      <view class="brightPoint" wx:if="{{project.pro_goodness.length!=0}}">
         <view class="brightPointBox flex">
           <!-- <image src="/img/img-star.png" class="titlePic"></image> -->
-          <view class="title ">投资亮点</view>
+          <view class="title" style="margin-bottom:32rpx;">投资亮点</view>
         </view>
         <!-- <view class="{{isChecked0?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
         <view class="brightUnfoldAfter" value="{{number}}">
@@ -71,10 +71,10 @@
               <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false && textBeyond0==true}}" data-check="{{0}}">收起</label> -->
       </view>
       <!--市场概况pro_market_genera  -->
-      <view class="brightPoint " wx:if="{{project.pro_market_genera.length!=0}}">
+      <view class="brightPoint" wx:if="{{project.pro_market_genera.length!=0}}">
         <view class="brightPointBox flex">
           <!-- <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image> -->
-          <view class="title ">市场概况</view>
+          <view class="title" style="margin-bottom:32rpx;">市场概况</view>
         </view>
         <!-- <view class="{{isChecked1?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
         <view class="brightUnfoldAfter" value="{{number}}">
@@ -92,10 +92,10 @@
               <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked1== false && textBeyond1==true}}" data-check="{{1}}">全部</label> -->
       </view>
       <!--产品概况pro_service -->
-      <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
+      <view class="brightPoint" wx:if="{{project.pro_service.length!=0}}">
         <view class="brightPointBox flex">
           <!-- <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image> -->
-          <view class="title ">产品概况</view>
+          <view class="title" style="margin-bottom:32rpx;">产品概况</view>
         </view>
         <!-- <view class="{{isChecked2?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
         <view class="brightUnfoldAfter" value="{{number}}">
@@ -116,7 +116,7 @@
       <view class="brightPoint " wx:if="{{project.pro_business_model.length!=0}}">
         <view class="brightPointBox flex">
           <!-- <image src="/img/icon-shangyemoshi@2x.png" class="titlePic"></image> -->
-          <view class="title">商业模式</view>
+          <view class="title" style="margin-bottom:32rpx;">商业模式</view>
         </view>
         <!-- <view class="{{isChecked3?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
         <view class="brightUnfoldAfter" value="{{number}}">
@@ -145,7 +145,7 @@
       <!-- <view wx:if="{{button_type != 1}}"> -->
       <view class="lockRenzheng" bindtap="toAccreditation" wx:if="{{status == 5 && button_type == 3}}">立即认证</view>
       <!--申请中  -->
-      <view class="lockRenzheng1" wx:if="{{button_type == 0}}"></view>
+      <view  wx:if="{{button_type == 0}}"></view>
       <!-- 重新申请 -->
       <view class="lockRenzheng1" bindtap="toAccreditation" wx:if="{{status == 0 ||status ==3}}" hover-class='t-other-button-hover'>立即认证</view>
       <!-- <image class="lock" src="/img/img-suo2@2x.png"></image>
