--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -228,6 +228,8 @@ page {
 
 .blockContentAfter {
   color: #666;
+  text-align: right;
+  margin-right: 12rpx;
 }
 
 .number {
@@ -258,10 +260,11 @@ page {
   font-size: 24rpx;
   color: #ccc;
   line-height: 54rpx;
-  text-align: center;
   width: 136rpx;
   height: 54rpx;
   margin-top: 29rpx;
+  margin-right:12rpx;
+  text-align: right;
 }
 
 .popularityNum, .potentialNum, .attentionNum {
