--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -8,28 +8,34 @@ page {
 scroll-view {
   height: 100%;
 }
+
 .theBottomBox {
   justify-content: center;
   margin-top: 32rpx;
   margin-bottom: 127rpx;
 }
-.investGroupBlock{
-  border-bottom: 0!important;
+
+.investGroupBlock {
+  border-bottom: 0 !important;
   /* padding-bottom: 0; */
 }
 
 /*我的项目卡片*/
-.t-userName{
+
+.t-userName {
   font-weight: bold;
 }
+
 /* .on {
   color: #ccc;
   border-bottom: 5rpx solid #333;
   text-align: center;
 } */
-.media123{
+
+.media123 {
   background: #f2f3f4;
 }
+
 .more {
   color: #009eff;
   font-size: 12px;
@@ -405,23 +411,28 @@ scroll-view {
   font-size: 32rpx;
   color: #333;
   line-height: 48rpx;
-  text-align: left!important;
+  text-align: left !important;
   font-weight: bold;
 }
 
 .industry {
-  font-family: PingFangSC-Regular;
-  font-size: 26rpx;
+  background: #f5f5f5;
+  border-radius: 4rpx;
+  padding: 0 16rpx;
+  height: 50rpx;
+  font-size: 24rpx;
   color: #666;
-  line-height: 26rpx;
-  text-align: left;
-  margin: 0rpx 10rpx 20rpx 0;
+  line-height: 50rpx;
+  text-align: center;
+  margin-right: 16rpx;
+  white-space: nowrap;
+  margin-bottom: 20rpx;
 }
 
 .allProjectDetail {
   font-size: 26rpx;
   color: #666;
-  line-height: 26rpx;
+  line-height: 32rpx;
   text-align: left;
   margin-bottom: 34rpx;
   margin-top: 24rpx;
@@ -485,7 +496,7 @@ scroll-view {
   width: 12rpx;
   height: 20rpx;
 }
- 
+
 .userInfo {
   width: 460rpx;
   align-items: center;
@@ -632,8 +643,7 @@ button::after {
 }
 
 .projectDetailLine {
-  /* padding: 0 16rpx; */
-  /* border-right: 1rpx solid #999; */
+  /* padding: 0 16rpx; *//* border-right: 1rpx solid #999; */
 }
 
 .projectDetailLine:first-child {
@@ -1233,8 +1243,7 @@ button::after {
 }
 
 .projectDetailLine {
-  /* padding: 0 16rpx; */
-  /* border-right: 1rpx solid #999; */
+  /* padding: 0 16rpx; *//* border-right: 1rpx solid #999; */
 }
 
 .projectDetailLine:first-child {
@@ -1288,7 +1297,7 @@ button::after {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 666
+  z-index: 666;
 }
 
 .contactModalBox {
@@ -1406,6 +1415,6 @@ button::after {
 .aline {
   /* margin: 0 32rpx; */
   width: 100%;
-  height: 2rpx;
-  background: #e6e6e6;
+  height: 1rpx;
+  background: #f0f0f0;
 }
