--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -883,33 +883,35 @@ textarea {
 }
 
 .t-applyMyProject .t-careerCompany {
-  margin-left: 148rpx;
-  margin-bottom: 48rpx;
-  max-width: 400rpx;
+  margin-left: 128rpx;
+  margin-bottom: 56rpx;
+  max-width: 364rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  line-height: 34rpx;
   /* font-weight: bold; */
 }
 
 .t-introduceBox {
-  margin-bottom: 16rpx;
+  margin-bottom: 12rpx;
   align-items: flex-end;
-  margin-left: 148rpx;
-  margin-top: 18rpx;
+  margin-left: 128rpx;
+  margin-top: 8rpx;
 }
 
 .t-introduceBox .t-userName {
   font-size: 36rpx;
   color: #333;
-  line-height: 38rpx;
+  line-height: 44rpx;
   text-align: left;
   margin-right: 8rpx;
   align-items: flex-end;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  max-width: 200rpx;
+  max-width: 240rpx;
+  font-weight: bold;
 }
 
 .t-applyMyProject .t-userPart {
@@ -922,7 +924,7 @@ textarea {
   text-overflow: ellipsis !important;
   overflow: hidden;
   white-space: nowrap;
-  margin-right: 8rpx;
+  /* margin-right: 8rpx; */
 }
 
 .t-applyMyProject .t-userCompany1 {
@@ -1080,13 +1082,14 @@ textarea {
 .t-roundGroupPush {
   font-size: 26rpx;
   /* color: #999; */
-  line-height: 28rpx;
+  line-height: 36rpx;
   text-align: left;
-  margin-bottom: 22rpx;
+  margin-bottom: 16rpx;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   min-height: 28rpx;
+  align-items: center
 }
 
 .t-hightLight1 {
@@ -1113,7 +1116,7 @@ textarea {
   text-overflow: ellipsis;
   text-align: left !important;
   color: #999;
-  max-width: 636rpx;
+  /* max-width: 636rpx; */
 }
 
 .t-record {
@@ -1219,7 +1222,7 @@ textarea {
   width: 48%;
   padding-right: 32rpx;
   height: 94rpx;
-  font-size:30rpx;
+  font-size: 30rpx;
   color: #3378e0;
   text-align: center;
   line-height: 94rpx;
@@ -1359,14 +1362,14 @@ textarea {
 
 .t-line {
   width: 1rpx;
-  height: 35rpx;
+  height: 40rpx;
   background: #f0f0f0;
   margin-top: -1rpx;
 }
 
 .t-line12 {
   width: 1rpx;
-  height: 35rpx;
+  height: 40rpx;
   background: #f0f0f0;
   margin-top: 5rpx;
 }
@@ -1422,7 +1425,7 @@ textarea {
 
 .t-alineHeight {
   margin: 0 32rpx;
-  width: 90%;
+  width: 91.5%;
   height: 1rpx;
   background: #f0f0f0;
 }
@@ -1595,8 +1598,8 @@ textarea {
 .t-pipei {
   width: 110rpx;
   position: absolute;
-  right: 11rpx;
-  top: 57rpx;
+  right: 0rpx;
+  top: 32rpx;
 }
 
 #t-pipei12 {
@@ -1604,8 +1607,9 @@ textarea {
 }
 
 .t-numPipei {
-  font-size: 20px;
+  font-size: 40rpx;
   color: #f95355;
+  font-weight: bold
 }
 
 .t-numPipei1 {
@@ -1617,10 +1621,11 @@ textarea {
   font-size: 10px;
   color: #999;
   margin-top: 8rpx;
+  text-align: right!important;
 }
 
 .t-industryStage {
-  margin-left: 140rpx;
+  margin-left: 128rpx;
 }
 
 .t-carCom {
@@ -1650,7 +1655,8 @@ textarea {
   width: 100%;
   z-index: 999;
 }
-.whiteSpace{
+
+.whiteSpace {
   height: 104rpx;
   width: 100%;
 }
