--- a/Weitianshi/pages/discover/myFriend/myFriend.wxml
+++ b/Weitianshi/pages/discover/myFriend/myFriend.wxml
@@ -21,9 +21,9 @@
                 <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='卖方FA'}}" src="/img/img-maifang2@2x.png"></image>
                 <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='创业者'}}" src="/img/img-chuangyezhe1@2x.png"></image>
               </view>
-              <view class="t-record">{{item.active_status}}</view>
+              <view class="t-record" wx:if="{{item.active_status}}">{{item.active_status}}</view>
               <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-
+              <view class="t-user_text" wx:if="{{item.user_avatar_text==''}}"></view>
             </view>
             <view class="t-careerCompany flex">
               <view class="t-userPosition">{{item.user_company_career}}</view>
@@ -37,9 +37,9 @@
 
             </view>
             <view class='t-people flex' wx:if='{{item.user_id==user_id}}'></view>
-            <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_industry.length != 0}}">
+            <view class="t-roundGroupPush flex">
               <image class="t-roundGroupTitle" src="/img/icon-lunci@2x.png"></image>
-              <view class="t-roundGroupContent">
+              <view class="t-roundGroupContent" wx:if="{{item.user_invest_industry.length != 0}}">
                 <block wx:for="{{item.user_invest_industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
                   <label wx:if="{{index < item.user_invest_industry.length-1}}">
                     {{industryItem.industry_name}}、
@@ -49,15 +49,17 @@
                   </label>
                 </block>
               </view>
+              <view class="t-roundGroupContent" wx:if="{{item.user_invest_industry.length == 0}}">暂未透露</view>
             </view>
-            <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_stage.length != 0}}">
+            <view class="t-roundGroupPush flex">
               <image class="t-roundGroupTitle" src="/img/icon-lingyu1@2x.png"></image>
-              <view class="t-roundGroupContent">
+              <view class="t-roundGroupContent" wx:if="{{item.user_invest_stage.length != 0}}">
                 <block wx:for="{{item.user_invest_stage}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
                   <label wx:if="{{index < item.user_invest_stage.length-1}}">{{stageItem.stage_name}}、</label>
                   <label wx:if="{{index ==item.user_invest_stage.length-1}}">{{stageItem.stage_name}}</label>
                 </block>
               </view>
+              <view class="t-roundGroupContent"  wx:if="{{item.user_invest_stage.length == 0}}">暂未透露</view>
             </view>
           </view>
         </view>
