--- a/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
+++ b/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
@@ -21,7 +21,7 @@
           <view class="t-investorColor" hover-class='t-hoverColor'>
             <!-- <template is='InvestorCard' data='{{item}}'></template> -->
             <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
-            <view class="t-redPoint" wx:if="{{item.message_status == 0}}"></view>
+              <view class="t-redPoint" wx:if="{{item.message_status == 0}}"></view>
               <view class="t-applyMyProject t-contacts-detailm">
                 <view class="t-introduceBox flex">
                   <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
@@ -29,12 +29,12 @@
                   <view class="t-userPart flex" wx:if="{{item.user_groups[0].group_title}}">
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资人'}}" src="/img/img-touziren@2x.png"></image>
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
-                    <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='卖方FA'}}" src="/img/img-maifang2@2x.png"></image>
-                    <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='创业者'}}" src="/img/img-chuangyezhe1@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='卖方FA'}}" src="/img/img-maifang2@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='创业者'}}" src="/img/img-chuangyezhe1@2x.png"></image>
                   </view>
                   <view class="t-record" wx:if="{{item.active_status}}">{{item.active_status}}</view>
                   <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-
+                  <view class="t-user_text" wx:if="{{item.user_avatar_text==''}}"></view>
                 </view>
                 <view class="t-careerCompany flex">
                   <view class="t-userPosition">{{item.user_company_career}}</view>
@@ -78,15 +78,15 @@
                 <span>加好友</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==1}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                <image class='t-itemPic' src='/img/icon-dadianhua@2x.png'></image>
                 <span>打电话</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==2}}' hover-class='t-hoverColor' hover-stop-propagation='true'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
-                <span>待验证</span>
+                <!-- <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image> -->
+                <span>待通过</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' catchtap='contactsAddDirect' hover-class='t-hoverColor' hover-stop-propagation='true'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
                 <span>加好友</span>
               </view>
               <view class="t-line"></view>
