--- a/Weitianshi/pages/message/browseMe/browseMe.wxml
+++ b/Weitianshi/pages/message/browseMe/browseMe.wxml
@@ -30,12 +30,12 @@
           <view class="t-userPart1">{{item.authentication[0].group_title}}</view> -->
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资人'}}" src="/img/img-touziren@2x.png"></image>
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
-                    <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='卖方FA'}}" src="/img/img-maifang2@2x.png"></image>
-                    <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='创业者'}}" src="/img/img-chuangyezhe1@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='卖方FA'}}" src="/img/img-maifang2@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='创业者'}}" src="/img/img-chuangyezhe1@2x.png"></image>
                   </view>
                   <view class="t-record" wx:if="{{item.active_status}}">{{item.active_status}}</view>
                   <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-
+                  <view class="t-user_text" wx:if="{{item.user_avatar_text==''}}"></view>
                 </view>
                 <view class="t-careerCompany flex">
                   <view class="t-userPosition">{{item.user_company_career}}</view>
@@ -67,27 +67,26 @@
                       <label wx:if="{{index ==item.user_invest_stage.length-1}}">{{stageItem.stage_name}}</label>
                     </block>
                   </view>
+                  <view class="t-roundGroupContent" wx:if="{{item.user_invest_stage.length == 0}}"> 暂未透露</view>
                 </view>
-                <view class="t-roundGroupContent" wx:if="{{item.user_invest_stage.length == 0}}"> 暂未透露</view>
               </view>
             </view>
 
             <view class="aline"></view>
             <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
               <view class="t-history1" wx:if='{{item.follow_status==0}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='contactsAdd'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
                 <span>加好友</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==1}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                <image class='t-itemPic' src='/img/icon-dadianhua@2x.png'></image>
                 <span>打电话</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==2}}' hover-class='t-hoverColor' hover-stop-propagation='true'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
                 <span>待验证</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' catchtap='contactsAddDirect' hover-class='t-hoverColor' hover-stop-propagation='true'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
                 <span>加好友</span>
               </view>
               <view class="t-line"></view>
