--- a/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxss
+++ b/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxss
@@ -1,5 +1,8 @@
+.signBox{
+  text-align: center;
+}
 .noIndentity {
-  background: #e43d59;
+  text-align: center;
   width: 200rpx;
   height: 200rpx;
   margin: 0 auto;
@@ -10,7 +13,7 @@
   font-size: 30rpx;
   color: #999;
   text-align: center;
-  margin: 24rpx 0 82rpx 0 ;
+  margin: 24rpx 0 82rpx 0;
 }
 
 .JumpTo {
