--- a/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxml
+++ b/Weitianshi/activitySignIn/pages/signNoIndentity/signNoIndentity.wxml
@@ -1,5 +1,5 @@
 <view class='signBox'>
-<image class="noIndentity" src='/img/icon-shibai@2x.png'></image>
+<image class="noIndentity" src='/img/img-meibaoming@2x.png'></image>
 <view class='noContent'>对不起，您还没有报名</view>
 <view class="JumpTo" bindtap='goToIndex'>去微天使看看</view>
 </view>
