--- a/Weitianshi/pages/discover/myFriend/myFriend.wxml
+++ b/Weitianshi/pages/discover/myFriend/myFriend.wxml
@@ -81,7 +81,7 @@
       </view>
     </view>
   </block>
-  <template is="theBottom" wx:if="{{myList!==''}}"></template>
+  <template is="theBottom" wx:if="{{jiandi==true}}"></template>
   <view class="high"></view>
 </scroll-view>
 <!--空状态-->
