--- a/Weitianshi/pages/message/viewProjectUser/viewProjectUser.wxml
+++ b/Weitianshi/pages/message/viewProjectUser/viewProjectUser.wxml
@@ -74,19 +74,19 @@
             <view class="aline"></view>
             <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
               <view class="t-history1" wx:if='{{item.follow_status==0}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='contactsAdd'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
                 <span>加好友</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==1}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-telephone="{{item.user_mobile}}" catchtap="telephone">
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                <image class='t-itemPic' src='/img/icon-dadianhua@2x.png'></image>
                 <span>打电话</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==2}}' hover-class='t-hoverColor' hover-stop-propagation='true'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
-                <span>待验证</span>
+                <!-- <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image> -->
+                <span style="color:#ccc">待验证</span>
               </view>
               <view class="t-history1" wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' catchtap='contactsAddDirect' hover-class='t-hoverColor' hover-stop-propagation='true'>
-                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
+                <image class='t-itemPic' src='/img/icon-jiahaoyou@2x.png'></image>
                 <span>加好友</span>
               </view>
               <view class="t-line"></view>
