--- a/Weitianshi/pages/my/sharePage/sharePage.wxml
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxml
@@ -57,11 +57,16 @@
       <image src='/img/icon-daitongguo@2x.png' class='t-shopPic'></image>
       <view class='t-shopBlock' style="color:#cccccc">待通过</view>
     </view>
-    <view class="t-flexBox" wx:if="{{button_type==3}}" data-telephone="{{user.user_mobile}}" catchtap="telephone" hover-class="t-hoverColor">
+    <view class="t-flexBox" wx:if="{{button_type==1}}" data-telephone="{{user.user_mobile}}" catchtap="telephone" hover-class="t-hoverColor">
       <image src='/img/icon-jiarenmai@2x.png' class='t-shopPic'></image>
       <view class='t-shopBlock'>打电话</view>
     </view>
     <view class="t-line"></view>
+    <view class="t-flexBox" wx:if="{{button_type==3}}" bindtap="addNetwork" hover-class="t-hoverColor">
+      <image src='/img/icon-jiarenmai@2x.png' class='t-shopPic'></image>
+      <view class='t-shopBlock'>加好友</view>
+    </view>
+     <view class="t-line"></view>
     <view bindtap="pushProject" class='t-creatProject' hover-class="t-redColor">提交项目</view>
   </view>
   <view class="flex t-aboutNetwork" wx:if="{{button_type==1}}" data-id="{{user.user_id}}">
